--- a/css_styling/home.css
+++ b/css_styling/home.css
@@ -115,7 +115,7 @@ nav ul li a{
 .who-we-are{
     padding: 100px;
 }
-.container{
+.container-who{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -300,5 +300,116 @@ nav ul li a{
     }
     .aim-img img{
         width: 100%;
+    }
+}
+
+/*This is the footer styling*/
+footer{
+    width: 100%;
+    background-color: #b4c8c3;
+    display: flex;
+    align-items: flex-end;
+    box-sizing: border-box;
+}
+.social-links{
+    text-align: center;
+}
+.social-links .fa{
+    height: 40px;
+    width: 40px;
+    font-size: 20px;
+    line-height: 40px;
+    border: 1px solid #06655c;
+    margin: 40px 5px 0;
+    color: #06655c;
+    cursor: pointer;
+    transition: 0.5s;
+    border-radius: 9px;
+}
+.social-links .fa:hover{
+    background: #06655c;
+    color: #fff;
+    transform: translateY(-8px);
+}
+.social-links p{
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.container-footer{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    width: 90%;
+    margin: 20px auto 20px;
+}
+.container-footer>div>h2{
+    color: #fbf9fa;
+    font-family: sans-serif;
+    font-size: 24px;
+    padding: 20px 0;
+}
+.container-footer>div>ul{
+    list-style-type: none;
+}
+.container>div>ul>li{
+    margin: 13px 0;
+    cursor: pointer;
+}
+.container-footer>div>ul>li>a{
+    font-size: 20px;
+    text-decoration: none;
+    font-family: sans-serif;
+    position: relative;
+    left: 0;
+    padding: 2px;
+    color: #000000;
+
+    transition: all 0.4s;
+}
+.container-footer>div>ul>li>a:hover{
+    left: 8px;
+}
+.container-footer>div>ul>li>a::selection{
+    background-color: rgb(49, 148, 140);
+    color: #afd5d8;
+}
+.container-footer>div>form{
+    background-color: #35858b;
+    margin: 20px 0 10px;
+    padding: 6px 14px;
+    border-radius: 7px;
+    width: 100%;
+}
+.container-footer>div>form>input{
+    border: none;
+    outline: none;
+    font-size: 12px;
+    width: 270px;
+    background-color: #fff;
+    color: #000;
+}
+.container-footer>div>form>button{
+    padding: 10px 20px;
+    font-size: 10px;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+    background-color: #fff;
+    color: #000;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.container-footer>div>form>button:hover{
+    background: #06655c;
+    color: #fff;
+    transform: translateY(-6px);
+    transition: 0.5s;
+}
+
+@media screen and (max-width: 770px) {
+    .container-footer{
+        flex-basis: 100%;
+        font-size: 14px;
     }
 }
