--- a/css_styling/wellness_packages.css
+++ b/css_styling/wellness_packages.css
@@ -1,96 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-}
-/*Styling dor the green backgroud at the landing page*/
-#banner{
-    background: linear-gradient(rgba(0,0,0,0.5), #0e685f), url(./media/images_and_Videos/pexels-cottonbro-studio-4056529.jpg);
-    background-size: cover;
-    background-position: center;
-    padding-top: 10;
-    height: 100vh;
-}
-
-/*The logo and landing page styling continues*/
-.logo{
-    width: 50px;
-    position: absolute;
-    top: 1.3%;
-    left: 5%;
-    border-radius: 8px;
-}
-.banner-text{
-    text-align: center;
-    color: #ffffff;
-    padding-top: 170px;
-}
-.banner-text h1{
-    font-size: 500%;
-    font-family: 'Kalam', cursive;
-}
-.banner-text p{
-    font-size: 18px;
-    font-style: italic;
-    margin: 0 auto;
-}
-.banner-btn{
-    margin: 70px auto 0;
-}
-.banner-btn a{
-    width: 150px;
-    text-decoration: none;
-    display: inline-block;
-    margin: 0 10px;
-    padding: 12px 0;
-    color: #0e685f;
-    border: 0.5px solid #fff;
-    border-radius: 4px;
-    position: relative;
-    z-index: 1;
-    transition: color 0.5s;
-}
-.banner-btn a span{
-    width: 0;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #0e685f;
-    z-index: -1;
-    transition: 0.5s;
-}
-.banner-btn a:hover span{
-    width: 100%;
-}
-.banner-btn a:hover{
-    color: #ffffff;
-}
-.navbar ul{
-    list-style: none;
-    background: #0e685f;
-    padding: 0;
-    margin: 0;
-    text-align: right;
-}
-.navbar li{
-    display: inline-block;
-    justify-content: space-evenly;
-}
-.navbar a {
-    text-decoration: none;
-    width: 180px;
-    display: block;
-    padding: 20px 0.0005px;
-    color: white;
-    font-weight: bold;
-    font-family: 'Poppins';
-    text-align: center;
-}
-.navbar a:hover{
-    background: gray;
-}
-
 /*--This is the wellness package section sections--*/
 .wellness_packages {
     left: 20%;
@@ -99,8 +6,8 @@
     flex-direction: column;
     margin-bottom: -2.6rem;
     background-blend-mode: color;
-    background: rgb(75, 223, 95);
-    background: radial-gradient(
+    background: #09413b;
+    background: radial-gradien(
     50% 85.9% at 50% 10%,
     rgba(112, 150, 104, 0) 0%,
     #0e685f 100%
@@ -108,10 +15,108 @@
     color: rgb(255, 255, 255);
 }
 
-.wellness_packages h1 {
+main > h1 {
     font-weight: 300;
     font-size: 60px;
     line-height: 75px;
     text-align: center;
-    color: red;
+    font-family: 'Kalam', cursive;
+}
+
+main {
+    background-color:;
+    opacity: 1;
+}
+
+.Nut-pack {
+    padding:100px
+}
+.container1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: cente;
+    margin-bottom: 30px;
+    text-align: center;
+    widt 500px;
+}
+
+.Nut-pack h2 {
+        text-align: center;
+}
+
+.npack1 {
+    padding-bottom: 30px;
+}
+
+.npack2 {
+    padding-bottom: 30px;
+}
+
+.npack3 {
+    padding-bottom: 30px;
+}
+
+.Fit-pack {
+        padding-left:100px;
+        padding-right: 100px;
+}
+.Fit-pack h2 {
+    text-align: center;
+}
+
+.fpack1 {
+    padding-bottom: 30px;
+}
+
+.fpack2 {
+    padding-bottom: 30px;
+}
+
+.fpack3 {
+    padding-bottom: 30px;
+}
+
+.img-section{
+    flex: 1;
+    text-align: center;
+    opacity: 0;
+    transform: translateY(50px);
+    animation: slideIn 1s forwards;
+}
+.img-section img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    background-color: blue;
+}
+
+.content-section p{
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+.container2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.container3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.container4 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.container1 p {
+    width: 50%;
 }
