--- a/css_styling/home.css
+++ b/css_styling/home.css
@@ -310,74 +310,55 @@ footer{
     display: flex;
     align-items: flex-end;
     box-sizing: border-box;
+    padding: 1rem;
 }
-.social-links{
-    text-align: center;
-}
-.social-links .fa{
-    height: 40px;
-    width: 40px;
-    font-size: 20px;
-    line-height: 40px;
-    border: 1px solid #06655c;
-    margin: 40px 5px 0;
-    color: #06655c;
-    cursor: pointer;
-    transition: 0.5s;
-    border-radius: 9px;
-}
-.social-links .fa:hover{
-    background: #06655c;
-    color: #fff;
-    transform: translateY(-8px);
-}
-.social-links p{
-    font-size: 12px;
-    margin-top: 10px;
-}
+
 
 .container-footer{
     display: flex;
     align-items: baseline;
     justify-content: space-around;
     width: 90%;
-    margin: 20px auto 20px;
+    margin: 20px auto 60px;
 }
 .container-footer>div>h2{
-    color: #fbf9fa;
+    color: #000100;
     font-family: sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     padding: 20px 0;
 }
 .container-footer>div>ul{
     list-style-type: none;
 }
-.container>div>ul>li{
-    margin: 13px 0;
+.container-footer>div>ul>li{
+    margin: 10px 0;
     cursor: pointer;
 }
 .container-footer>div>ul>li>a{
-    font-size: 20px;
+    font-size: 14px;
     text-decoration: none;
     font-family: sans-serif;
     position: relative;
     left: 0;
     padding: 2px;
     color: #000000;
-
     transition: all 0.4s;
 }
 .container-footer>div>ul>li>a:hover{
     left: 8px;
+    background: #06655c;
+    color: #fff;
+    /* transform: translateY(-4px); */
+    transition: 0.7s;
 }
 .container-footer>div>ul>li>a::selection{
     background-color: rgb(49, 148, 140);
-    color: #afd5d8;
+    color: #b7cbc8;
 }
 .container-footer>div>form{
-    background-color: #35858b;
-    margin: 20px 0 10px;
-    padding: 6px 14px;
+    background-color: #2d786b;
+    margin: 10px 0 8px;
+    padding: 6px 10px;
     border-radius: 7px;
     width: 100%;
 }
@@ -385,7 +366,7 @@ footer{
     border: none;
     outline: none;
     font-size: 12px;
-    width: 270px;
+    width: 150px;
     background-color: #fff;
     color: #000;
 }
@@ -405,6 +386,38 @@ footer{
     color: #fff;
     transform: translateY(-6px);
     transition: 0.5s;
+}
+
+.social-links{
+    text-align: center;
+    align-items: center;
+}
+.social-links .fa{
+    height: 30px;
+    width: 30px;
+    font-size: 15px;
+    line-height: 30px;
+    border: 1px solid #06655c;
+    margin: 40px 5px 0;
+    color: #06655c;
+    cursor: pointer;
+    transition: 0.5s;
+    border-radius: 9px;
+}
+.social-links .fa:hover{
+    background: #06655c;
+    color: #fff;
+    transform: translateY(-8px);
+}
+.footer-copyright{
+    color: rgb(0, 0, 0);
+    font-weight: 400;
+    font-size: 12px;
+    /* line-height: 15px; */
+    display: flex;
+    /* position: relative; */
+    /* right: 500px; */
+    justify-content: center;
 }
 
 @media screen and (max-width: 770px) {
