--- a/css_styling/home.css
+++ b/css_styling/home.css
@@ -413,7 +413,7 @@ footer{
     color: rgb(0, 0, 0);
     font-weight: 400;
     font-size: 12px;
-    /* line-height: 15px; */
+    /* ~ */
     display: flex;
     /* position: relative; */
     /* right: 500px; */
