--- a/css_styling/wellness_packages.css
+++ b/css_styling/wellness_packages.css
@@ -48,7 +48,7 @@ main {
     align-items: cente;
     margin-bottom: 30px;
     text-align: center;
-    widt 500px;
+    width: 500px;
 }
 
 .Nut-pack h2 {
