--- a/css_styling/wellness_packages.css
+++ b/css_styling/wellness_packages.css
@@ -130,3 +130,9 @@ main {
 .container1 p {
     width: 50%;
 }
+nav ul li a:hover{
+    background: #06655c;
+    color: #fff;
+    /* transform: translateY(-6px); */
+    transition: 0.5s;
+}
