--- a/css_styling/home.css
+++ b/css_styling/home.css
@@ -84,6 +84,12 @@ nav ul li a{
     text-decoration: none;
     color: #fff;
 }
+nav ul li a:hover{
+    background: #06655c;
+    color: #fff;
+    /* transform: translateY(-6px); */
+    transition: 0.5s;
+}
 #menuBtn{
     width: 50px;
     height: 50px;
