--- a/css_styling/about.css
+++ b/css_styling/about.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', 'sans-serif', 'Kalam';
+    font-family: 'Poppins', sans-serif;
 }
 
 /* banner section background and color */
@@ -34,12 +34,6 @@
     font-size: small;
     transition: 0.5s;
 }
-
-
-.navbar .nav-item.active a {
-    color: rgb(255, 255, 255); 
-}
-
 nav ul li{
     list-style: none;
     margin: 50px 20px;
@@ -77,33 +71,14 @@ nav ul li a{
 }
 
 /* about the company paragraph */
-.banner-text{
+.about-text{
     text-align: center;
     color: #fff;
     padding-top: 170px;
-    position: relative;
-    animation: zoom-out 1s ease-out forwards;
-    transform-origin: center center;
-}
-
-@keyframes zoom-out {
-    0% {
-    opacity: 0;
-    transform: scale(2);
-    }
-    100% {
-    opacity: 1;
-    transform: scale(1);
-    }
-}
-
-.banner-text h1{
-    font-size: 500%;
+    font-size: 50px;
     font-family: 'Kalam', cursive;
-    text-align: center;
 }
-
-  /* about the comapny */
+/* about the comapny */
 .about-us{
     padding: 60px;
 }
