--- a/css_styling/about.css
+++ b/css_styling/about.css
@@ -83,30 +83,51 @@ nav ul li a{
     padding: 60px;
 }
 .container{
+    flex-direction: row;
     justify-content: space-around;
     display: flex;
     gap: 10px;
+
 }
 .company{
-    padding: 20px;
+    padding: 5px;
     font-size: 18px;
     line-height: 1.6;
     flex: 1;
+    width: 60%;
 }
 .img-sect{
     padding: 20px;
     flex: 1;
     overflow: hidden;
-    width: 200px;
+    width: 100%;
     height: 250px;
-
 }
 .img-sect img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 10px;
 }
+
+@media (max-width: 800px) {
+    .container{
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+    
+    }
+    .company{
+        padding: 5px;
+        font-size: 18px;
+        line-height: 1.6;
+        flex: 1;
+        width: 100%;
+    }
+}
+
 #bold{
     font-style: italic;
     padding: 5px;
@@ -299,8 +320,6 @@ nav ul li a:hover{
 footer{
     width: 100%;
     background-color: #b4c8c3;
-    display: flex;
-    align-items: flex-end;
     box-sizing: border-box;
     padding: 1rem;
 }
@@ -309,14 +328,18 @@ footer{
     display: flex;
     align-items: baseline;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     margin: 10px auto 20px;
+    gap: 20px;
+    flex-wrap: wrap;
 }
+
+
 .container-footer>div>h2{
     color: #000100;
     font-family: sans-serif;
     font-size: 20px;
-    padding: 20px 0;
+    padding: 3px 0;
 }
 .container-footer>div>ul{
     list-style-type: none;
@@ -337,7 +360,6 @@ footer{
 }
 .container-footer>div>ul>li>a:hover{
     left: 8px;
-    background: #06655c;
     color: #fff;
     /* transform: translateY(-4px); */
     transition: 0.7s;
@@ -349,9 +371,10 @@ footer{
 .container-footer>div>form{
     background-color: #2d786b;
     margin: 10px 0 8px;
-    padding: 6px 10px;
+    padding: 5px 10px;
     border-radius: 7px;
-    width: 100%;
+    width: 95%;
+
 }
 .container-footer>div>form>input{
     border: none;
@@ -379,9 +402,13 @@ footer{
     transition: 0.5s;
 }
 
+
 .social-links{
     text-align: center;
     align-items: center;
+}
+.linkse{
+    display: flex;
 }
 .social-links .fa{
     height: 30px;
@@ -410,9 +437,23 @@ footer{
     /* right: 500px; */
     /*justify-content: center;*/
 
-@media screen and (max-width: 770px) {
-    .container-footer>div{
-        flex-basis: 100%;
-        font-size: 14px;
+@media (max-width: 768px) {
+        .container-footer {
+            flex-direction: colmn;
+        }
+    
+        .contai
+        
     }
+    
+    @media (max-width: 915px) {
+        .first-group{
+            flex-direction: column;
+            text-align: center;
+    }
+        .second-group{
+            flex-direction: column;
+            text-align: center;
+    
+        }
 }
