--- a/css_styling/wellness_packages.css
+++ b/css_styling/wellness_packages.css
@@ -1,3 +1,215 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+/*Styling dor the green backgroud at the landing page*/
+#banner{
+    background: linear-gradient(rgba(0,0,0,0.5), #0e685f), url(./media/images_and_Videos/pexels-cottonbro-studio-4056529.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+/*The logo and landing page styling continues*/
+.logo{
+    width: 70px;
+    position: absolute;
+    top: 4%;
+    left: 7%;
+    border-radius: 8px;
+}
+.banner-text{
+    text-align: center;
+    color: #fff;
+    padding-top: 170px;
+}
+.banner-text h1{
+    font-size: 500%;
+    font-family: 'Kalam', cursive;
+}
+.banner-text p{
+    font-size: 18px;
+    font-style: italic;
+    margin: 0 auto;
+}
+.banner-btn{
+    margin: 70px auto 0;
+}
+.banner-btn a{
+    width: 150px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 10px;
+    padding: 12px 0;
+    color: #fff;
+    border: 0.5px solid #fff;
+    border-radius: 4px;
+    position: relative;
+    z-index: 1;
+    transition: color 0.5s;
+}
+.banner-btn a span{
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #fff;
+    z-index: -1;
+    transition: 0.5s;
+}
+.banner-btn a:hover span{
+    width: 100%;
+}
+.banner-btn a:hover{
+    color: #000;
+}
+#sideNav{
+    width: 250px;
+    height: 100vh;
+    position: fixed;
+    right: -250px;
+    top: 0;
+    background: #04817f;
+    z-index: 2;
+    font-size: small;
+    transition: 0.5s;
+}
+nav ul li{
+    list-style: none;
+    margin: 50px 20px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+}
+nav ul li a:hover{
+    background: #06655c;
+    color: #fff;
+    /* transform: translateY(-6px); */
+    transition: 0.5s;
+}
+#menuBtn{
+    width: 50px;
+    height: 50px;
+    background: #06655c;
+    text-align: center;
+    position: fixed;
+    right: 30px;
+    top: 20px;
+    border-radius: 8px;
+    z-index: 3;
+    cursor: pointer;
+}
+
+/*Media query for the Menu*/
+#menuBtn img{
+    width: 20px;
+    margin-top: 15px;
+}
+@media screen and (max-width:770px){
+    .banner-text h1{
+        font-size: 44px;
+    }
+    .banner-btn a{
+        display: block;
+        margin: 20px auto;
+    }
+}
+
+.who-we-are{
+    padding: 100px;
+}
+.container-who{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.img-section{
+    flex: 1;
+    text-align: center;
+    opacity: 0;
+    transform: translateY(50px);
+    animation: slideIn 1s forwards;
+}
+.img-section img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+.content-section{
+    
+    opacity: 0;
+    transform: translateY(50px);
+    animation: fadeIn 1s forwards;
+    animation-delay: 0.5s;
+}
+.content-section h2{
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+.content-section p{
+    font-size: 18px;
+    line-height: 1.6;
+}
+.content-section .button{
+    display: inline-block;
+    padding: 10px 15px;
+    font-size: 17px;
+    background-color:#2c8984;
+    color: #fff;
+    text-decoration: none;
+    margin-top: 15px;
+    transition: 0.5s ease;
+    border-radius: 7px;
+}
+.content-section .button:hover{
+    background-color: #68b9b2;
+}
+
+/*This code sets the fade in action when the page is relaoded at Aims section*/
+@keyframes slideIn{
+    from{
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/*Media querry for the image image of aim*/
+@media screen and (max-width: 920px) {
+    .container{
+        flex-direction: column;
+    }
+    .img-section, .content-section{
+        flex: 100%;
+        flex-direction: column;
+        text-align: center;
+        padding: 25px;
+    }
+    .img-section img{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+}
+
+
 #banner2{
     background: linear-gradient(rgba(0,0,0,0.5), #0e685f), url(./media/images_and_Videos/img-wel.jpg);
     background-size: cover;
@@ -8,22 +220,6 @@
 
 
 /*--This is the wellness package section sections--*/
-.wellness_packages {
-    left: 20%;
-    right: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: -2.6rem;
-    background-blend-mode: color;
-    background: #09413b;
-    background: radial-gradien(
-    50% 85.9% at 50% 10%,
-    rgba(112, 150, 104, 0) 0%,
-    #0e685f 100%
-    );
-    color: rgb(255, 255, 255);
-}
 
 main > h1 {
     font-weight: 300;
@@ -48,48 +244,23 @@ main {
     align-items: center;
     margin-bottom: 30px;
     text-align: center;
-<<<<<<< HEAD
-    width: 200px;
-=======
->>>>>>> 06b69bafd840acb38debbd9f4b47901e796d3076
+    gap: 30px;
 }
 
 .Nut-pack h2 {
         text-align: center;
 }
 
-.npack1 {
-    padding-bottom: 30px;
-}
-
-.npack2 {
-    padding-bottom: 30px;
-}
-
-.npack3 {
-    padding-bottom: 30px;
-}
 
 .Fit-pack {
-        padding-left:100px;
-        padding-right: 100px;
+        padding: 100px;
 }
 .Fit-pack h2 {
     text-align: center;
     padding: 3%;
     }
 
-.fpack1 {
-    padding-bottom: 30px;
-}
 
-.fpack2 {
-    padding-bottom: 30px;
-}
-
-.fpack3 {
-    padding-bottom: 30px;
-}
 
 .img-section{
     flex: 1;
@@ -102,19 +273,20 @@ main {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
-    background-color: blue;
+    height: 100%;
+    object-fit: cover;
 }
 
-.content-section p{
-    font-size: 18px;
-    line-height: 1.6;
-}
 
+.content-section{
+    
+}
 .container2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
 }
 
 .container3 {
@@ -131,8 +303,28 @@ main {
     align-items: center;
 }
 
+.container5 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.container6 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.container7 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .container1 p {
-<<<<<<< HEAD
     width: 100%;
 }
 
@@ -140,25 +332,26 @@ main {
 footer{
     width: 100%;
     background-color: #b4c8c3;
-    display: flex;
-    align-items: flex-end;
     box-sizing: border-box;
     padding: 1rem;
 }
-
 
 .container-footer{
     display: flex;
     align-items: baseline;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     margin: 10px auto 20px;
+    gap: 20px;
+    flex-wrap: wrap;
 }
+
+
 .container-footer>div>h2{
     color: #000100;
     font-family: sans-serif;
     font-size: 20px;
-    padding: 20px 0;
+    padding: 3px 0;
 }
 .container-footer>div>ul{
     list-style-type: none;
@@ -179,7 +372,6 @@ footer{
 }
 .container-footer>div>ul>li>a:hover{
     left: 8px;
-    background: #06655c;
     color: #fff;
     /* transform: translateY(-4px); */
     transition: 0.7s;
@@ -191,9 +383,10 @@ footer{
 .container-footer>div>form{
     background-color: #2d786b;
     margin: 10px 0 8px;
-    padding: 6px 10px;
+    padding: 5px 10px;
     border-radius: 7px;
-    width: 100%;
+    width: 95%;
+
 }
 .container-footer>div>form>input{
     border: none;
@@ -221,9 +414,13 @@ footer{
     transition: 0.5s;
 }
 
+
 .social-links{
     text-align: center;
     align-items: center;
+}
+.linkse{
+    display: flex;
 }
 .social-links .fa{
     height: 30px;
@@ -252,18 +449,8 @@ footer{
     /* right: 500px; */
     /*justify-content: center;*/
 
-@media screen and (max-width: 770px) {
-    .container-footer>div{
-        flex-basis: 100%;
-        font-size: 14px;
+    @media screen and (max-width: 770px) {
+        .container-footer>div{
+            font-size: 14px;
+        }
     }
-=======
-    width: 50%;
-}
-nav ul li a:hover{
-    background: #06655c;
-    color: #fff;
-    /* transform: translateY(-6px); */
-    transition: 0.5s;
->>>>>>> 06b69bafd840acb38debbd9f4b47901e796d3076
-}
